<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="agreement">Соглашение</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>

    <string name="agree_url">https://yandex.ru/legal/practicum_offer</string>
    <string name="shareMessage">Привет, Android-разработка — это круто! https://practicum.yandex.ru/android-developer</string>
    <string name="supportMessageSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMessageText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="studentEmail">pumpkinjust@yandex.ru</string>

    <string name="photo_description">изображение альбома</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью</string>
    <string name="check_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="fav_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_nothing_found">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="playlist_photo_description">Фото плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>

    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_neutral_button">Отмена</string>
    <string name="dialog_positive_button">Завершить</string>

    <string name="dialog_success_message">"Добавлено в плейлист %1$s</string>
    <string name="dialog_error_message">"Трек уже добавлен в плейлист %1$s</string>

    <plurals name="track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="add_to_playlist">Добавить в плейлист</string>

    <plurals name="track_time">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минуты</item>
    </plurals>

    <string name="dialog_message_delete_track">Хотите удалить трек?</string>
    <string name="dialog_message_delete_playlist">Хотите удалить плейлист?</string>
    <string name="dialog_neutral_button_delete">НЕТ</string>
    <string name="dialog_positive_button_delete">ДА</string>

    <string name="empty_track_list_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="empty_playlist">Плейлист не содержит треков</string>

    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>