<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextColor="@color/settings_toolbar_color" />

    <FrameLayout
        android:id="@+id/night_theme_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/night_theme_tv"
            style="@style/settingsSwitchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/settings_padding_end"
            android:theme="@style/MySwitch"
            tools:checked="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/share_tv"
        style="@style/settingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support_tv"
        style="@style/settingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/agree_tv"
        style="@style/settingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agree"
        app:drawableEndCompat="@drawable/ic_user_agree" />
</LinearLayout>
