<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/placeholder_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_placeholder_no_internet"
        app:layout_constraintBottom_toTopOf="@id/placeholder_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholder_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_internet"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_pic" />

    <TextView
        android:id="@+id/placeholder_check_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/check_internet"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/placeholder_no_internet"
        app:layout_constraintRight_toRightOf="@id/placeholder_no_internet"
        app:layout_constraintTop_toBottomOf="@id/placeholder_no_internet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_button"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white_to_black"
        app:layout_constraintLeft_toLeftOf="@id/placeholder_check_internet"
        app:layout_constraintRight_toRightOf="@id/placeholder_check_internet"
        app:layout_constraintTop_toBottomOf="@id/placeholder_check_internet" />
</androidx.constraintlayout.widget.ConstraintLayout>