<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_to_black"
    tools:context=".ui.playback.PlayFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="@color/ic_color"
        app:titleTextColor="@color/settings_toolbar_color" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/artwork_im"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintBottom_toTopOf="@id/track_name_tv"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/track_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/track_name_color"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/artwork_im"
                app:layout_constraintStart_toStartOf="@id/artwork_im"
                app:layout_constraintTop_toBottomOf="@id/artwork_im"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/artist_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/track_name_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/track_name_tv"
                app:layout_constraintStart_toStartOf="@id/track_name_tv"
                app:layout_constraintTop_toBottomOf="@id/track_name_tv"
                tools:text="The Beatles" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/add_to_playlist_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@null"
                android:button="@drawable/add_to_playlist_selector"
                android:src="@drawable/ic_add_to_playlist_button"
                app:layout_constraintBottom_toBottomOf="@id/play_bt"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/play_bt"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/play_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@null"
                android:button="@drawable/play_selector"
                android:src="@drawable/ic_play_button"
                app:layout_constraintEnd_toStartOf="@id/favorite_bt"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist_bt"
                app:layout_constraintTop_toBottomOf="@id/artist_name_tv"
                app:useMaterialThemeColors="false" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/favorite_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@null"
                android:button="@drawable/favorite_selector"
                app:layout_constraintBottom_toBottomOf="@id/play_bt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/play_bt"
                app:useMaterialThemeColors="false"
                tools:checked="false" />

            <TextView
                android:id="@+id/play_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/play_bt"
                app:layout_constraintStart_toStartOf="@id/play_bt"
                app:layout_constraintTop_toBottomOf="@id/play_bt"
                tools:text="0:30" />

            <TextView
                android:id="@+id/duration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:text="@string/duration"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/album_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_time" />

            <TextView
                android:id="@+id/duration_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/duration_tv"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="5:35" />

            <TextView
                android:id="@+id/album_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:text="@string/album"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/duration_tv"
                app:layout_constraintTop_toBottomOf="@id/duration_tv" />

            <TextView
                android:id="@+id/album_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="end"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constrainedWidth="false"
                app:layout_constraintBaseline_toBaselineOf="@id/album_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/album_tv"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:text="@string/year"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/album_tv"
                app:layout_constraintTop_toBottomOf="@id/album_tv" />

            <TextView
                android:id="@+id/year_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/year_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintWidth="wrap_content"
                tools:text="1965" />

            <TextView
                android:id="@+id/genre_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:text="@string/genre"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/year_tv"
                app:layout_constraintTop_toBottomOf="@id/year_tv" />

            <TextView
                android:id="@+id/genre_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/genre_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintWidth="wrap_content"
                tools:text="Rock" />

            <TextView
                android:id="@+id/country_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:text="@string/country"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/genre_tv"
                app:layout_constraintTop_toBottomOf="@id/genre_tv" />

            <TextView
                android:id="@+id/country_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ys_display_regular"
                android:paddingVertical="8dp"
                android:textColor="@color/ic_color"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/country_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintWidth="wrap_content"
                tools:text="Великобритания" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>